--- a/.github/workflows/pr-submit.yml
+++ b/.github/workflows/pr-submit.yml
@@ -11,6 +11,9 @@ on:
       - 'docs/**'
       - '**.md'
 
+  # Allow manual triggering of the workflow
+  workflow_dispatch:
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
