--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,34 @@
 name: Build
+
 on:
- push:
-   branches:
-     - master
- pull_request:
-   types: [opened, synchronize, reopened]
- workflow_dispatch:
+  push:
+    branches:
+      - master
+  pull_request:
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+
 jobs:
   sonarqube:
     name: sonarqube
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
       - name: Install dependencies
         run: yarn
+
       - name: Test and coverage
         run: yarn jest --coverage
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
         env:
