--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
@@ -25,6 +25,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+
+      - name: Install Jest
+        run: yarn add jest --dev  # Ensure Jest is installed
 
       - name: Test and coverage
         run: yarn jest --coverage
