--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn add jest --dev  # Ensure Jest is installed
 
       - name: Test and coverage
-        run: yarn jest --coverage
+        run: yarn jest --coverage --passWithNoTests
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
