--- a/.github/workflows/pr-submit.yml
+++ b/.github/workflows/pr-submit.yml
@@ -1,56 +1,26 @@
-name: On PR Submit
+name: Snyk Example
 
-# Control when the action will run.
 on:
-  # Trigger the workflow on pull request events
-  pull_request:
-    branches: [ production ]
-    paths-ignore:
-      - 'docs/**'
-      - '**.md'
-
+  push:
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  security:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    # Skip based on commit message
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Check-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Build the docker image
-      - run: |
-          docker build \
-            --no-cache \
-            --file Dockerfile.for-ci .
-
-  # New job for SCA security testing
-  security-test-sca:
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 10
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Snyk Authentication
-        run: |
-          echo ${{ secrets.SNYK_TOKEN }} | docker run --rm -i --env SNYK_TOKEN=$(cat) snyk/snyk:node snyk auth
+    - name: Setup Snyk
+      uses: snyk/actions/setup@v2
 
-      - name: Security SCA Testing
-        run: |
-          echo "Security SCA testing..."
-          docker run --rm \
-            --env SNYK_TOKEN=${{ secrets.SNYK_TOKEN }} \
-            -v $(pwd):/app \
-            snyk/snyk:node snyk test
+    - name: Setup Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.13'
+
+    - name: Snyk test
+      run: snyk test
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
