--- a/.github/workflows/pr-submit.yml
+++ b/.github/workflows/pr-submit.yml
@@ -7,19 +7,12 @@ on:
 jobs:
   security:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Setup Snyk
-      uses: snyk/actions/setup@v2
-
-    - name: Setup Go
-      uses: actions/setup-go@v3
+    - uses: actions/checkout@master
+    - uses: snyk/actions/setup@master
+    - uses: actions/setup-go@v1
       with:
-        go-version: '1.13'
-
+        go-version: "1.13"
     - name: Snyk test
       run: snyk test
       env:
